# video-sdk

./: .gitignore  .gitmodules  CONTRIBUTING.rst  LICENSE.base  LICENSE.sc  LICENSE.top  LICENSE.txt  LICENSE.validate  LICENSE.xclbin  README.md  README.rst  browse.html  index.html
docs/: README.rst  c_apis.rst  card_management.rst  conf.py  container_setup.rst  contributing.rst  deploying_with_kubernetes.rst  examples.rst  getting_started_on_prem.rst  getting_started_on_vt1.rst  index.rst  installation.rst  introduction.rst  managing_compute_resources.rst  release_notes.rst  running_multiple_jobs.rst  setup.rst  specs_and_features.rst  tuning_encoding_quality.rst  using_ffmpeg.rst  using_gstreamer.rst
examples/xma/: .clang-format  CMakeLists.txt  Jenkinsfile  Makefile  build_and_test.bash  setup.bash  setup.sh  smokeTest_xmaApp.py
examples/xma/common/enc_utils/include/: xlnx_enc_dyn_params.h
examples/xma/common/enc_utils/src/: xlnx_enc_dyn_params.c
examples/xma/common/include/: xlnx_app_utils.h  xlnx_xrm_utils.h
examples/xma/common/src/: xlnx_app_utils.c  xlnx_xrm_utils.c
examples/xma/common/xvbm_utils/include/: xlnx_xvbm_utils.h
examples/xma/common/xvbm_utils/src/: xlnx_xvbm_utils.c
examples/xma/decode_only/: Makefile
examples/xma/decode_only/include/: xlnx_dec_arg_parse.h  xlnx_dec_common.h  xlnx_dec_common_parser.h  xlnx_dec_h264_parser.h  xlnx_dec_h265_parser.h  xlnx_dec_xma_props.h  xlnx_dec_xrm_interface.h  xlnx_decoder.h
examples/xma/decode_only/src/: xlnx_dec_arg_parse.c  xlnx_dec_common_parser.c  xlnx_dec_h264_parser.c  xlnx_dec_h265_parser.c  xlnx_dec_xma_props.c  xlnx_dec_xrm_interface.c  xlnx_decoder.c  xlnx_decoder_app.c
examples/xma/decode_only/test/scripts/: decoder_app_test.sh
examples/xma/decoder/app/include/: xlnx_dec_arg_parse.h  xlnx_decoder_app.h
examples/xma/decoder/app/src/: xlnx_dec_arg_parse.c  xlnx_decoder_app.c
examples/xma/decoder/lib/include/: xlnx_dec_common.h  xlnx_dec_common_parser.h  xlnx_dec_h264_parser.h  xlnx_dec_h265_parser.h  xlnx_dec_xma_props.h  xlnx_dec_xrm_interface.h  xlnx_decoder.h
examples/xma/decoder/lib/src/: xlnx_dec_common_parser.c  xlnx_dec_h264_parser.c  xlnx_dec_h265_parser.c  xlnx_dec_xma_props.c  xlnx_dec_xrm_interface.c  xlnx_decoder.c
examples/xma/decoder/test/scripts/: decoder_app_test.sh
examples/xma/encode_only/: Makefile
examples/xma/encode_only/include/: xlnx_app_utils.h  xlnx_enc_constants.h  xlnx_enc_xma_props.h  xlnx_enc_xrm_interface.h  xlnx_encoder.h  xlnx_lookahead.h
examples/xma/encode_only/src/: xlnx_enc_xma_props.c  xlnx_enc_xrm_interface.c  xlnx_encoder.c  xlnx_encoder_app.c  xlnx_lookahead.c
examples/xma/encode_only/test/scripts/: enc_app_test.sh
examples/xma/encoder/app/include/: xlnx_enc_arg_parse.h  xlnx_encoder_app.h
examples/xma/encoder/app/src/: xlnx_enc_arg_parse.c  xlnx_encoder_app.c
examples/xma/encoder/lib/include/: xlnx_enc_constants.h  xlnx_enc_xma_props.h  xlnx_enc_xrm_interface.h  xlnx_encoder.h  xlnx_lookahead.h
examples/xma/encoder/lib/src/: xlnx_enc_xma_props.c  xlnx_enc_xrm_interface.c  xlnx_encoder.c  xlnx_lookahead.c
examples/xma/scale_only/: Makefile
examples/xma/scale_only/include/: xlnx_scal_arg_parse.h  xlnx_scal_common.h  xlnx_scal_xma_props.h  xlnx_scal_xrm_interface.h  xlnx_scaler.h
examples/xma/scale_only/src/: xlnx_app_utils.c  xlnx_scal_arg_parse.c  xlnx_scal_utils.c  xlnx_scal_xma_props.c  xlnx_scal_xrm_interface.c  xlnx_scaler.c  xlnx_scaler_app.c
examples/xma/scale_only/test/scripts/: scaler_app_test.sh
examples/xma/scaler/app/include/: xlnx_scal_arg_parse.h  xlnx_scaler_app.h
examples/xma/scaler/app/src/: xlnx_scal_arg_parse.c  xlnx_scaler_app.c
examples/xma/scaler/lib/include/: xlnx_scal_common.h  xlnx_scal_xma_props.h  xlnx_scal_xrm_interface.h  xlnx_scaler.h
examples/xma/scaler/lib/src/: xlnx_scal_utils.c  xlnx_scal_xma_props.c  xlnx_scal_xrm_interface.c  xlnx_scaler.c
examples/xma/transcode/: Makefile
examples/xma/transcode/include/: xlnx_dec_utils.h  xlnx_decoder.h  xlnx_encoder.h  xlnx_lookahead.h  xlnx_scaler.h  xlnx_transcoder.h  xlnx_transcoder_constants.h  xlnx_transcoder_parser.h  xlnx_transcoder_xma_props.h  xlnx_transcoder_xrm_interface.h
examples/xma/transcode/src/: xlnx_dec_h264.c  xlnx_dec_hevc.c  xlnx_dec_utils.c  xlnx_decoder.c  xlnx_encoder.c  xlnx_lookahead.c  xlnx_scaler.c  xlnx_transcoder.c  xlnx_transcoder_app.c  xlnx_transcoder_parser.c  xlnx_transcoder_xma_props.c  xlnx_transcoder_xrm_interface.c
examples/xma/transcode/test/scripts/: transcoder_app_test.sh
examples/xma/transcoder/app/src/: xlnx_transcoder_app.c
examples/xma/transcoder/lib/include/: xlnx_dec_utils.h  xlnx_decoder.h  xlnx_encoder.h  xlnx_lookahead.h  xlnx_scaler.h  xlnx_transcoder.h  xlnx_transcoder_constants.h  xlnx_transcoder_parser.h  xlnx_transcoder_xma_props.h  xlnx_transcoder_xrm_interface.h
examples/xma/transcoder/lib/src/: xlnx_dec_h264.c  xlnx_dec_hevc.c  xlnx_dec_utils.c  xlnx_decoder.c  xlnx_encoder.c  xlnx_lookahead.c  xlnx_scaler.c  xlnx_transcoder.c  xlnx_transcoder_parser.c  xlnx_transcoder_xma_props.c  xlnx_transcoder_xrm_interface.c
examples/xma/transcoder/test/scripts/: transcoder_app_test.sh
patches/: u30_1.5_patch.sh
v1.0/: .buildinfo  c_apis.html  card_management.html  contributing.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  release_notes.html  running_multiple_jobs.html  search.html  searchindex.js  setup.html  using_ffmpeg.html
v1.5/: .buildinfo  c_apis.html  card_management.html  container_setup.html  contributing.html  deploying_with_kubernetes.html  examples.html  genindex.html  getting_started_on_prem.html  getting_started_on_vt1.html  index.html  managing_compute_resources.html  objects.inv  release_notes.html  search.html  searchindex.js  specs_and_features.html  using_ffmpeg.html
v2.0/: .buildinfo  c_apis.html  card_management.html  container_setup.html  contributing.html  deploying_with_kubernetes.html  examples.html  genindex.html  getting_started_on_prem.html  getting_started_on_vt1.html  index.html  managing_compute_resources.html  (+8 more)
(+663 files in other folders)
